Added new footer

--- a/test.html
+++ b/test.html
@@ -20,5 +20,6 @@
       simulate moving to different sections of the website. You can expand this template by adding
       more content and styles.
     </p>
+    <footer>copyright</footer>
   </body>
 </html>
